corpus/c/syntax/case-02/snapshots/gcc15/render.verbose.txt
error: syntax error
--> src/main.c:2:17
help: fix the first parser error at the user-owned location
why: expected expression before ';' token
| src/main.c:2:17
|     int value = ;
|                 ^
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output